@@ -10,10 +10,10 @@
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -46,7 +46,13 @@ public interface Query<T> {
     }
 
     static <T> Query<T> of(final Supplier<T> supplier) {
-        return () -> List.of(supplier.get());
+        return () -> {
+            final T value = supplier.get();
+            if (value == null) {
+                return Collections.emptyList();
+            }
+            return List.of(value);
+        };
     }
 
     static <T> Query<T> of(final T element) {
@@ -55,5 +61,4 @@ public interface Query<T> {
         }
         return () -> List.of(element);
     }
-
 }
